# Joke-Bot

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  app.py  bot_utils.py  config.py  docker-compose.yml  index.html  keep_alive.py  main.py  pyproject.toml  requirements.txt
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
handlers/: __init__.py  admin.py  user.py
keyboards/: inline_keyboards.py
locales/: jokebot.pot  messages.pot
locales/en/LC_MESSAGES/: jokebot.mo  jokebot.po  messages.mo  messages.po
locales/uk/LC_MESSAGES/: jokebot.mo  jokebot.po  messages.mo  messages.po
log/: logger.py
messages/: bot_messages.py
middlewares/: __init__.py  ban_middleware.py  language_middleware.py  throttling_middleware.py
services/: __init__.py  analytics.py  db.py  schema.py
templates/: index.html
